stylesheet.css
/* ... */
.page-button:hover {
    border-radius: 0;
    background-color: rgb(242, 242, 242);
    padding: 1% 4%;
    border: none;
    color: rgb(0, 0, 0);
    border: 1px solid;
    font-size: large;
    cursor: pointer;
    margin: 1%;
    box-shadow: 6px 6px 0px black;
    transition: box-shadow 0.5s ease-in-out;
}
.caption {
    text-align: center;
    color: black;
    font-style: italic;
    font-size: medium;
}
.line {
    width: 75vw;
}

/* Nav Bar Stuff */
#nav-bar {
    text-align: center;
    position: fixed;
    background-color: rgb(255, 255, 255);
    color: rgb(103, 103, 103);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1.3%;
    height: 4.3vh;
    font-size: 25px;
    box-shadow: 0px 5px 6px -5px rgb(70, 70, 70);
    width: 100vw;
    z-index: 5;
}
#nav-title {
    width: 25vw;
    display: flex;
    font-size: 35px;
    align-items: center;
    padding: 1%;
}
#nav-title:hover {
    color: rgb(62, 62, 62);
}
.nav-line {
    width: 7vw;
}
.nav-element {
    margin: 15px;
    cursor: pointer;
    color: rgb(103, 103, 103);
    text-decoration: none;
    font-weight: 200;
}
.nav-element:hover {
    margin: 15px;
    cursor: pointer;
    color: rgb(34, 34, 34);
    transition: color 1s ease-in-out;
}
#fake-nav {
    padding: 1.3%;
    height: 4.3vh;
    width: 100vw;
}
.selected-nav {
    color: rgb(62, 62, 62);
}
@media (max-width: 600px) {
    .nav-element {
        display: none;
    }
}

/* Default Page */
#banner {
    height: 5em;
    overflow: hidden;
    width: 100vw;
    background-image: url('Assets/Paintings/atraces.jpg');
    background-size: 100vw;
    color: whitesmoke;
    display: flex;
    justify-content: end;
    align-items: end;
}
#painting-caption {
    margin: 0;
    margin-right: 1%;
    margin-bottom: 0.5%;
    font-size: 2vb;
}
#page-title {
    background-color: white;
    padding: 1%;
    text-align: center;
    backdrop-filter: blur(20px);
    width: fit-content;
    border: 1px solid black;
    letter-spacing: 15px;
    text-indent: 25px;
    box-shadow: 5px 5px 0px black;
}
.page-box {
    background-color: white;
    padding: 2%;
    text-align: center;
    width: 60vw;
    border: 1px solid black;
    box-shadow: 5px 5px 0px black;
    margin: 2%;
}
#page-body {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1%;
}
#page-content {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    width: 60vw;
    background-color: rgba(255, 255, 255, 1);
    color: rgb(103, 103, 103);
    font-size: large;
}
.page-text {
    width: 60vw;
}
@media (max-width: 570px) {
    #page-title {
        letter-spacing: 2px;
        text-indent: 0px;
    }
}
@media (max-width: 800px) {
    #socials {
        flex-wrap: wrap;
    }
    .page-text {
        width: 90vw;
    }
    .page-box {
        width: 90vw;
    }
    #page-body {
        flex-direction: column;
        gap: 10px;
    }
    #page-content {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
}

/* About Page */
#profile-pic {
    width: 15em;
    overflow: hidden;
}
#profile-container {
    padding: 1%;
    margin: 1%;
    border: 1px solid black;
    color: gray;
    text-align: center;
    box-shadow: 12px 12px 3px 2px rgba(0, 0, 0, 0.2);
    transform: rotate(3deg);
}
#socials {
    display: flex;
    justify-content: center;
    gap: 3%;
    flex-wrap: wrap;
}

/* Projects */
#project-section {
    width: 98vw;
    padding: 1%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgb(250, 250, 242);
}
.project-box {
    background-image: url('Assets/Paintings/peonies_in_a_vase_2018.44.124.webp');
    background-size: 100vw;
    margin-top: 4%;
    display: flex;
    padding: 1.5%;
    text-align: left;
    overflow: hidden;
    justify-content: space-around;
    width: 75vw;
    color: rgb(103, 103, 103);
    border: 3mm ridge rgb(209, 188, 94);
    outline: 0.4rem dashed rgb(199, 187, 78);
    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
    display: flex;
}
.project-images {
    width: 20vw;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin: 1vh 1vw;
    padding: 1vh;
    background-color: whitesmoke;
}

@media (max-width: 1060px) {
    .project-images {
        display: none;
    }
}
@media (max-width: 900px) {
    .project-box {
        width: 80vw;
    }
}
@media (max-width: 450px) {
    .project-box {
        width: 90vw;
    }
    .project-info {
        margin: 1vh 1vw;
        padding: 1vh;
        font-size: medium;
    }
}
.project-title {
    font-size: 4vh;
}
.project-info {
    background-color: white;
    font-size: medium;
    text-align: left;
}
.project-info p {
    text-align: center;
}
.skills {
    display: flex;
    align-items: center;
    justify-content: center;
}
.tech-skill {
    color: black;
    margin: 1%;
    padding: 1.5%;
    border: 1px solid black;
}

/* Experience Section */
#experience-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2%;
    padding: 4%;
    background-color: rgb(255, 246, 231);
}
#experience-boxes {
    display: flex;
    justify-content: center;
    align-items: center;
}
.experience-box {
    width: 30vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2.2%;
    text-align: left;
    overflow: hidden;
    color: rgb(103, 103, 103);
    background-image: url(Assets/Paintings/flowers_on_a_window_ledge_2014.79.25.webp);
    background-size: 100vw;
    margin: 1%;
    font-size: large;
    border: 3mm ridge rgb(209, 188, 94);
    outline: 0.4rem dashed rgb(199, 187, 78);
    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
    display: flex;
}
.experience-info {
    background-color: white;
}
.experience-box h3 {
    text-align: center;
}
/* ... */

